# CS184-Smoke-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  grid.cpp  grid.h  main.cpp  remake.sh
CGL/: CMakeLists.txt  cmake_install.cmake
CGL/CGL.xcodeproj/: project.pbxproj
CGL/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
CGL/src/: cmake_install.cmake
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  smoke_simulator
build2/CGL/: Makefile  cmake_install.cmake
build2/CGL/src/: Makefile  cmake_install.cmake
build2/ext/nanogui/: Makefile  cmake_install.cmake
build2/ext/nanogui/ext_build/glfw/: Makefile  cmake_install.cmake
build2/ext/nanogui/ext_build/glfw/src/: Makefile  cmake_install.cmake
docs/: index.html  index.md
docs/milestone/: index.html  index.md
documents/final/: index.html  index.md
documents/milestone/: index.html  index.md
documents/proposal/: index.html
ext/nanogui/: CMakeLists.txt  cmake_install.cmake
ext/nanogui/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  nanogui-obj_cmakeRulesBuildPhase.makeRelease  nanogui-obj_postBuildPhase.makeDebug  nanogui_postBuildPhase.makeDebug  nanogui_postBuildPhase.makeMinSizeRel  nanogui_postBuildPhase.makeRelWithDebInfo  nanogui_postBuildPhase.makeRelease
ext/nanogui/NanoGUI.xcodeproj/: project.pbxproj
ext/nanogui/ext/glfw/: CMakeLists.txt
ext/nanogui/ext_build/glfw/: cmake_install.cmake
ext/nanogui/ext_build/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  install_postBuildPhase.makeMinSizeRel
ext/nanogui/ext_build/glfw/GLFW.xcodeproj/: project.pbxproj
ext/nanogui/ext_build/glfw/src/: cmake_install.cmake
ext/nanogui/ext_build/glfw/src/CMakeScripts/: glfw_objects_postBuildPhase.makeRelWithDebInfo  glfw_postBuildPhase.makeDebug  glfw_postBuildPhase.makeMinSizeRel  glfw_postBuildPhase.makeRelWithDebInfo  glfw_postBuildPhase.makeRelease
shaders/: Bump.frag  Diffuse.frag  Displacement.frag  Displacement.vert  Mirror.frag  Phong.frag  Texture.frag
src/: CMakeLists.txt  callback.cpp  callback.h  cmake_install.cmake  color.h  common.cpp  common.h  grid.cpp  grid.h  main.cpp  shader.h  smoke_screen.cpp  smoke_screen.h
